# atcoder-world-tour-web

./: Cargo.toml  build.sh
docs/: CNAME  asset-manifest.json  index.html  precache-manifest.247f2f880491749d2bf45748f89c0576.js  precache-manifest.4b3a75dfc13e2cd98608b6d4b54859d0.js  precache-manifest.5aaa72e23f670045e6b7a76c238cda6e.js  precache-manifest.9b068f11418ba2fa00c9b015eb5bacef.js  precache-manifest.b57eee41ca96e5157d559892bd308b98.js  precache-manifest.ca02054e9c6054af2c604839938e37f3.js  service-worker.js
docs/static/css/: main.52600938.chunk.css  main.52600938.chunk.css.map
docs/static/js/: 2.02f61d6a.chunk.js  2.02f61d6a.chunk.js.map  2.083ba81c.chunk.js  2.083ba81c.chunk.js.map  main.3147b0b9.chunk.js  main.3147b0b9.chunk.js.map  main.72f2745c.chunk.js  main.72f2745c.chunk.js.map  main.980731d4.chunk.js  main.980731d4.chunk.js.map  main.d1ffac68.chunk.js  main.d1ffac68.chunk.js.map  main.d8bb0c72.chunk.js  main.d8bb0c72.chunk.js.map  runtime-main.b80191ca.js  runtime-main.b80191ca.js.map
src/: main.rs
webapp/: package.json
webapp/public/: index.html
webapp/src/: App.tsx  index.css  util.ts
webapp/src/data/: DataLoader.ts
webapp/src/data/2019/: contests.json  result.json
webapp/src/pages/: Standings.tsx  User.tsx
