[package]
name = "atcoder-world-tour"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "1.0"
futures = "0.3"
log = "0.4"
simple_logger = "1.3"
scraper = "0.11"
